# AGILE

./: Makefile  README.md
baseline/benchmarks/dlrm-criteo-bam/: CMakeLists.txt  config.h  dlrm.h  main.cu
baseline/benchmarks/dlrm-criteo-test/: CMakeLists.txt  config.h  dlrm.h  main.cu  runner.cuh  settings.h
baseline/benchmarks/test_api_bfs/: CMakeLists.txt  main.cu  settings.h
baseline/benchmarks/test_bfs/: CMakeLists.txt  main.cu  settings.h
baseline/benchmarks/test_pr/: CMakeLists.txt  main.cu  settings.h
benchmarks/: README.md
benchmarks/api-graph-bfs/: config.h  main.cu
benchmarks/api-graph-pr/: config.h  main.cu
benchmarks/app-dlrm-criteo-async/: config.h  dlrm.h  main.cu  runner.cuh
benchmarks/app-dlrm-criteo-async-profile/: config.h  dlrm.h  main.cu
benchmarks/app-dlrm-criteo-sync/: dlrm.h  main.cu  runner.cu
benchmarks/app-dlrm-criteo-test/: config.h  main.cu  runner.cu
benchmarks/async-block-ctc/: config.h  main.cu
benchmarks/bench-read/: config.h  main.cu
benchmarks/bench-write/: config.h  main.cu
benchmarks/block-read-ssd2file/: config.h  main.cu
benchmarks/block-write-file2ssd/: config.h  main.cu
benchmarks/common/: cache_impl.h  table_impl.h
benchmarks/graph-bfs/: main.cu
benchmarks/graph-pr/: main.cu
common/: nvme.h
cpu_verify/bfs/: config.h  main.cpp
cpu_verify/spmv/: config.h  csr_mat.h  main.cpp
demo/: CMakeLists.txt  host_html.sh
demo/examples/bfs-agile/: CMakeLists.txt
demo/examples/bfs-agile/src/: main.cu
demo/examples/bfs-bam/: CMakeLists.txt
demo/examples/bfs-bam/src/: main.cu
demo/examples/bfs-gpu/: CMakeLists.txt
demo/examples/bfs-gpu/src/: main.cu
demo/examples/common/: demo_examples.h  demo_ipc.h
demo/examples/ctc/: CMakeLists.txt
demo/examples/ctc/src/: main.cu
demo/examples/hello-world/: CMakeLists.txt
demo/examples/hello-world/src/: main.cu
demo/examples/pr-agile/: CMakeLists.txt
demo/examples/pr-agile/src/: main.cu
demo/examples/pr-bam/: CMakeLists.txt
demo/examples/pr-bam/src/: main.cu
demo/examples/pr-gpu/: CMakeLists.txt
demo/examples/pr-gpu/src/: main.cu
demo/examples/reg-report/: CMakeLists.txt
demo/examples/reg-report/src/: main.cpp
demo/html/: index.html  new-ui.html
demo/html/css/: custom.css  index.css
demo/html/data/: dlrm_charts.json  reg_report_data.json  sweep_ctc_data.json  sweep_results.json
demo/html/js/: app.js  ctc-chart.js  dlrm-charts.js  graph-breakdown-chart.js  io-step-animation.js  narrative-sections.js  page-bootstrap.js  page-shell.js
demo/scripts/: gen_graph_to_ssd.sh  sweep_bench.sh  sweep_ctc.sh  switch_nvme_driver.sh  test_bfs.sh  test_pr.sh
demo/server/: CMakeLists.txt  main.cpp
demo/tools/cpu-bfs/: CMakeLists.txt  main.cc
demo/tools/cpu-pr/: CMakeLists.txt  main.cc
demo/tools/graph-gen/: CMakeLists.txt  graph_dump.h  main.cc
demo/tools/ssd-copy/: CMakeLists.txt
demo/tools/ssd-copy/src/: main.cu
driver/agile_gpu-linux-6.17.0/common/: agile_gpu_krnl.h
driver/agile_gpu-linux-6.17.0/kernel/: Makefile  agile_gpu_krnl.c
driver/agile_gpu-linux-6.17.0/userspace/: CMakeLists.txt
driver/agile_gpu-linux-6.8.0/common/: agile_gpu_krnl.h
driver/agile_gpu-linux-6.8.0/kernel/: Makefile  agile_gpu_krnl.c
driver/agile_gpu-linux-6.8.0/userspace/: CMakeLists.txt
driver/agile_gpu/common/: agile_gpu_krnl.h
driver/agile_gpu/kernel/: Makefile  agile_gpu_krnl.c  reload.sh
driver/agile_gpu/userspace/: CMakeLists.txt
driver/agile_host_driver/common/: agile_host_driver.h
driver/agile_host_driver/kernel/: Makefile  agile_host.c  reload.sh
driver/agile_host_driver/userspace/: a.out  main.cpp
driver/agile_kernel_driver/common/: agile_dma_cmd.h  agile_kernel_driver.h
driver/agile_kernel_driver/kernel/: Makefile  agile_kernel.c  reload.sh
driver/agile_kernel_driver/userspace/coroutine-dma/: CMakeLists.txt
driver/agile_kernel_driver/userspace/coroutine-dma/src/: agile_coroutine.h  agile_dma.hpp  agile_dma_service.h  agile_dmem.h  agile_driver.h  agile_gpu_mem.h  agile_helper.h  config.h  io_utils.h  main.cpp  main.cu  t_agile_service.h
driver/agile_kernel_driver/userspace/dma-service/: CMakeLists.txt
driver/agile_kernel_driver/userspace/dma-service/src/: agile_coroutine.h  agile_dma_queue.hpp  agile_dma_service.h  agile_driver.h  agile_helper.h  agile_lock.h  agile_logger.h  config.h  io_utils.h  main.cu  t_agile_service.h
driver/agile_mem/: .agile_mem.ko.cmd  .agile_mem.mod.cmd  .agile_mem.mod.o.cmd  .agile_mem.o.cmd  Makefile  agile_mem.c  agile_mem.ko  agile_mem.mod  agile_mem.mod.c  modules.order
driver/agile_nvme_driver-linux-6.8.0/kernel/: Makefile  agile_nvme_driver.c  reload.sh
driver/agile_nvme_driver-linux-6.8.0/scripts/: reload.sh
driver/agile_nvme_driver-linux-6.8.0/userspace-nvme/: test_nvme  test_nvme.cpp  uname.h
driver/agile_nvme_driver/common/: agile_nvme_driver.h
driver/agile_nvme_driver/kernel/: .agile_nvme_driver.ko.cmd  .agile_nvme_driver.mod.cmd  .agile_nvme_driver.mod.o.cmd  .agile_nvme_driver.o.cmd  agile_nvme_driver.c  agile_nvme_driver.ko  agile_nvme_driver.mod  agile_nvme_driver.mod.c  (+1 more)
driver/bam_nvme_driver-linux-6.8.0/: Makefile  ctrl.c  map.h  pci.c
experiments/: auto_dlrm.sh  rand_read.sh  rand_write.sh  run_bfs.sh  run_bfs_api.sh  run_bfs_core.sh  run_ctc.sh  run_dlrm.sh  run_pr.sh  run_spmv.sh  run_spmv_api.sh  run_spmv_core.sh
include/: agile_array_warp.h  agile_array_warp.tpp  agile_buf.h  agile_buf_shared.h  agile_cache_hierarchy.h  agile_cache_hierarchy.tpp  agile_ctrl.h  agile_ctrl.tpp  agile_dmem.h  agile_gpu_krnl.h  agile_helper.h  agile_helpper.h  agile_host.h  agile_lock.h  agile_logger.h  agile_nvme.h  agile_nvme_admin_ctrl.h  agile_nvme_driver.h  agile_share_table.h  agile_shared_table_buf.h  agile_swcache.h  agile_swcache.tpp  logger.hpp
scripts/: insmod.sh  run.sh
tools/: build_criteo_vocab.ipynb  cpu-bfs.sh  cpu-pr.sh  graph_dump.h
toturial/00_Select_Target_SSD/: README.md
toturial/01_Hello_AGILE/: README.md
toturial/02_Hello_AGILE_Docker/: README.md
tutorial/01_Hello_AGILE/: README.md
tutorial/02_Hello_AGILE_Docker/: README.md
(+53 files in other folders)
